# lamatrix

./: .buildinfo  .gitignore  Contact.html  GetInvolved.html  Makefile  Quickstart.html  README.md  README.rst  apidoc.html  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test.json
.github/workflows/: black.yml  deploy-docs.yaml  flake8.yml  pytest.yml
_modules/: index.html
_modules/lamatrix/: combine.html  distributions.html  model.html
_sources/api_modules/: lamatrix.combine.rst.txt  lamatrix.model.rst.txt  lamatrix.models.astrophysical.rst.txt  lamatrix.models.gaussian.rst.txt  lamatrix.models.spline.rst.txt
_sources/model-examples/: index.rst.txt
_sources/tutorials/: Example5.ipynb.txt  intro-combining.ipynb.txt
api_modules/: lamatrix.combine.html  lamatrix.distributions.html  lamatrix.model.html  lamatrix.models.astrophysical.html  lamatrix.models.gaussian.html  lamatrix.models.simple.html  lamatrix.models.spline.html
docs/: apidoc.rst  conf.py  index.rst
docs/api_modules/: lamatrix.distributions.rst  lamatrix.model.rst  lamatrix.models.gaussian.rst
docs/model-examples/: Spline.ipynb  (+1 more)
doctrees/: Contact.doctree  GetInvolved.doctree  Quickstart.doctree  apidoc.doctree  index.doctree
html/: .buildinfo  Contact.html  GetInvolved.html  Quickstart.html  apidoc.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
model-examples/: Constant.html  Constant.ipynb  Gaussian.html  Gaussian.ipynb  Gaussian2D.html  Gaussian2D.ipynb  Polynomial.html  Polynomial.ipynb  Sinusoid.html  Sinusoid.ipynb  Spline.html  Step.html  index.html  lnGaussian.html  lnGaussian.ipynb  lnGaussian2D.html
tests/: test_combine.py  test_distributions.py  test_fitting.py  test_generator.py  test_simple.py  test_sparse.py
tutorials/: Example4.html  Example5.html  Example6.html  Example6.ipynb  Example7.html  Example8.html  Example8.ipynb  index.html  intro-basics.html  intro-basics.ipynb  intro-combining.html  intro-ndimensions.html  intro-priors.html  intro-priors.ipynb
use-cases/: index.html  k2-example.html  tess-example.html  tess-example.ipynb
(+130 files in other folders)
