[tool.poetry]
name = "lamatrix"
version = "0.1.0"
description = ""
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]
readme = "README.md"
packages = [{include = "lamatrix", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
