[tool.poetry]
name = "lamatrix"
version = "0.1.0"
description = ""
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]
readme = "docs/README.md"
packages = [{include = "lamatrix", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pytest = "^8.1.1"
jupyterlab = "^4.1.4"
matplotlib = "^3.8.3"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.14"
mkdocstrings = "^0.24.1"
pytkdocs = {version = "^0.16.1", extras = ["numpy-style"]}



[tool.poetry.group.docs.dependencies]
tesswcs = "^1.1.2"
pandas = "^2.2.1"
astroquery = "^0.4.7"
scipy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
