[tool.poetry]
name = "lamatrix"
version = "1.0.0"
description = ""
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]
readme = "README.rst"
packages = [{include = "lamatrix", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
rich = "^13.7.1"
scipy = ">=1.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pytest = "^8.1.1"
jupyterlab = "^4.1.4"
matplotlib = "^3.8.3"
nbsphinx = "^0.9.3"
sphinx = "^7.3.7"
sphinx_rtd_theme = "^2.0.0"
sphinx_astropy = "^1.9.1"
sphinx_automodapi = "^0.17.0"
pydata-sphinx-theme = "^0.15.4"
sphinx-autobuild = "^2024.10.3"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
